ISSUE-#98 Add scrollbar styling

--- a/src/components/SlidePanel/SlidePanel.module.css
+++ b/src/components/SlidePanel/SlidePanel.module.css
@@ -4,6 +4,8 @@
   height: 100%;
 
   overflow-y: auto;
+  scrollbar-color: #aaaaaa #fdf9f8;
+  scrollbar-width: thin;
 
   border-right: 1px solid black;
 }
